<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <!-- Avatar -->
    <ImageView
        android:id="@+id/userAvatarImg"
        android:layout_width="@dimen/_80mdp"
        android:layout_height="@dimen/_80mdp"
        android:layout_marginTop="@dimen/_50mdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/user7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        style="@style/CustomFilledBpx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50mdp"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:hint="@string/name"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAvatarImg">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14font_mdp"
        style="@style/TextViewLightStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        style="@style/CustomFilledBpx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20mdp"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdt"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        style="@style/CustomFilledBpx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20mdp"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/philippineSilver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdt"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Submit -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50mdp"
        android:layout_marginTop="@dimen/_40mdp"
        android:fontFamily="sans-serif-light"
        android:text="@string/submit"
        android:textColor="@color/gunmetal"
        android:textSize="@dimen/_18font_mdp"
        app:cornerRadius="@dimen/_6mdp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"/>

    <!-- Loading -->
    <ProgressBar
        android:id="@+id/submitLoading"
        android:layout_width="@dimen/_20mdp"
        android:layout_height="@dimen/_20mdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/submitBtn"
        app:layout_constraintTop_toTopOf="@+id/submitBtn"
        app:layout_constraintStart_toStartOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="@+id/submitBtn"/>


</androidx.constraintlayout.widget.ConstraintLayout>